--- a/index.html
+++ b/index.html
@@ -25,38 +25,42 @@
       <p>Our Artificial Intelligence powered tools use millions of project data points
         to ensure that your project is successful</p>
     </header>
-    <section class="main">
-      <div class="box box1">
-        <div class="box-text">
-          <h5>Supervisor</h5>
-          <p>Monitors activity to identify project roadblocks</p>
-        </div>
-        <img src="images/icon-supervisor.svg" alt="supsvg">
-      </div>
-      <div class="box-container">
-        <div class="box box2">
+    <main>
+
+
+      <section class="main">
+        <div class="box box1">
           <div class="box-text">
-            <h5>Team Builder</h5>
-            <p>Scans our talent network to create the optimal team for your project</p>
+            <h4>Supervisor</h4>
+            <p>Monitors activity to identify project roadblocks</p>
           </div>
-          <img src="images/icon-team-builder.svg" alt="teamsvg">
+          <img src="images/icon-supervisor.svg" alt="supsvg">
         </div>
-        <div class="box box3">
+        <div class="box-container">
+          <div class="box box2">
+            <div class="box-text">
+              <h4>Team Builder</h4>
+              <p>Scans our talent network to create the optimal team for your project</p>
+            </div>
+            <img src="images/icon-team-builder.svg" alt="teamsvg">
+          </div>
+          <div class="box box3">
+            <div class="box-text">
+              <h4>Karma</h4>
+              <p>Regularly evaluates our talent to ensure quality</p>
+            </div>
+            <img src="images/icon-karma.svg" alt="karmasvg">
+          </div>
+        </div>
+        <div class="box box4">
           <div class="box-text">
-            <h5>Karma</h5>
-            <p>Regularly evaluates our talent to ensure quality</p>
+            <h5>Calculator</h5>
+            <p>Uses data from past projects to provide better delivery estimates</p>
           </div>
-          <img src="images/icon-karma.svg" alt="karmasvg">
+          <img src="images/icon-calculator.svg" alt="calsvg">
         </div>
-      </div>
-      <div class="box box4">
-        <div class="box-text">
-          <h5>Calculator</h5>
-          <p>Uses data from past projects to provide better delivery estimates</p>
-        </div>
-        <img src="images/icon-calculator.svg" alt="calsvg">
-      </div>
-    </section>
+      </section>
+    </main>
   </div>
 
 
@@ -65,9 +69,9 @@
 
 
 
-  
 
-  
+
+
 
 
 
